removed old level page and updated styling to ensure spacing of title matches

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ body {
 	border-radius: 1.5rem;
 	padding: 3.5%;
 	position: relative;
-	height: 90vh;
+	max-height: 90vh;
 	margin: 50% auto;
 	width: 45vw;
 }
@@ -66,10 +66,12 @@ body {
 .main-overlay-home {
 	background-color: rgba(7, 4, 60, 0.8);
 	color: white;
-	padding: 3.5vh;
+	padding: 4%;
 	border-radius: 1.5rem;
 	max-height: 75vh;
 }
+
+.top-boarder-container {margin-bottom: 4%;}
 
 .title {
 	font-size: 75px;
@@ -82,7 +84,7 @@ body {
 	font-family: "Lexend", sans-serif;
 	font-size: 30px;
 	font-weight: 400;
-	padding-top: 4vh;
+	padding-top: 6%;
 }
 
 .btn-home {
@@ -143,7 +145,7 @@ body {
 	font-size: 20px;
 }
 
-.social-icon a {color: #e597f6;}
+.social-icon {color: #e597f6;}
 
 /*----Level.html styles----*/
 
